--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
-  <meta name="google-site-verification" content="LDx1DYIFq_ezkoaXazcwKVY9YPVjzJ4Su-tkO8EHTJg" />
+  <meta
+    name="google-site-verification"
+    content="LDx1DYIFq_ezkoaXazcwKVY9YPVjzJ4Su-tkO8EHTJg"
+  />
   <title>ACE-Z Fansub</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
@@ -11,7 +14,7 @@
   <style>
     body {
       margin: 0;
-      font-family: "Roboto", sans-serif;
+      font-family: 'Roboto', sans-serif;
       font-size: 24px;
       line-height: 1.2em;
     }
