Update facebook url

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="outer">
     <div class="inner">
       <div class="centered">
-        <a href="https://www.facebook.com/AceZ.Fansub"
+        <a href="https://www.facebook.com/AceZ.Translator"
           ><i>
             <h1>ACE-Z Fansub<br /><small>2010 - 2021</small></h1>
           </i></a
